packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/res-006-dangling-import.ttrp
// expect: TTRP-RES-006
import erp.nosuch.*
container c target polars { }
